--- a/trunk/src/timeline_async_slice_group_test.html
+++ b/trunk/src/timeline_async_slice_group_test.html
@@ -135,6 +135,7 @@ base.defineModule('timeline_async_slice_group_test')
   tests.testAsyncSlice_toJSON = function() {
     var js = [
       '{',
+      '  "category" : "",',
       '  "title" : "a",',
       '  "start" : 0,',
       '  "colorId" : 0,',
@@ -143,6 +144,7 @@ base.defineModule('timeline_async_slice_group_test')
       '  "startThread" : "1:1",',
       '  "endThread" : "1:1",',
       '  "subSlices" : [ {',
+      '        "category" : "",',
       '        "title" : "a",',
       '        "start" : 0,',
       '        "colorId" : 0,',
