--- a/trunk/src/timeline_counter_test.html
+++ b/trunk/src/timeline_counter_test.html
@@ -26,7 +26,7 @@ base.defineModule('timeline_counter_test')
 
 
   function createCounterWithTwoSeries() {
-    var ctr = new TimelineCounter(null, 0, 'myCounter');
+    var ctr = new TimelineCounter(null, 0, '', 'myCounter');
     ctr.seriesNames.push('a', 'b');
     ctr.seriesColors.push(0, 1);
     ctr.timestamps.push(0, 1, 2, 3);
