--- a/trunk/src/timeline_cpu_test.html
+++ b/trunk/src/timeline_cpu_test.html
@@ -32,7 +32,7 @@ base.defineModule('timeline_cpu_test')
 
   tests.testCpuBounds_OneSlice = function() {
     var cpu = new TimelineCpu(undefined, 1);
-    cpu.slices.push(new TimelineSlice('a', 0, 1, {}, 3));
+    cpu.slices.push(test_utils.newSlice(1, 3));
     cpu.updateBounds();
     assertEquals(1, cpu.minTimestamp);
     assertEquals(4, cpu.maxTimestamp);
@@ -48,13 +48,13 @@ base.defineModule('timeline_cpu_test')
   tests.testShiftTimestampsForward = function() {
     var cpu = new TimelineCpu(undefined, 1);
     var ctr = cpu.getOrCreateCounter('foo', 'bar');
-    cpu.slices.push(new TimelineSlice('a', 0, 1, {}, 3));
+    cpu.slices.push(test_utils.newSlice(1, 3));
     var shiftCount = 0;
     ctr.shiftTimestampsForward = function(ts) {
       if (ts == 0.32)
         shiftCount++;
     };
-    cpu.slices.push(new TimelineSlice('a', 0, 1, {}, 3));
+    cpu.slices.push(test_utils.newSlice(1, 3));
     cpu.shiftTimestampsForward(0.32);
     assertEquals(shiftCount, 1);
     assertEquals(1.32, cpu.slices[0].start);
