--- a/trunk/src/timeline_filter_test.html
+++ b/trunk/src/timeline_filter_test.html
@@ -38,28 +38,28 @@ base.defineModule('timeline_filter_test')
   var TimelineCategoryFilter = tracing.TimelineCategoryFilter;
 
   tests.testTimelineTitleFilter = function() {
-    var s0 = new TimelineSlice('a', 0, 1, {}, 3);
+    var s0 = test_utils.newSlice(1, 3);
     assertFalse(new TimelineTitleFilter('').matchSlice(s0));
 
     assertTrue(new TimelineTitleFilter('a').matchSlice(s0));
     assertFalse(new TimelineTitleFilter('x').matchSlice(s0));
 
-    var s1 = new TimelineSlice('ba', 0, 1, {}, 3);
+    var s1 = test_utils.newSliceNamed('ba', 1, 3);
     assertTrue(new TimelineTitleFilter('a').matchSlice(s1));
     assertTrue(new TimelineTitleFilter('ba').matchSlice(s1));
     assertFalse(new TimelineTitleFilter('x').matchSlice(s1));
   }
 
   tests.testTimelineCategoryFilter = function() {
-    var sNoCategory = new TimelineSlice('a', 0, 1, {}, 3);
+    var sNoCategory = test_utils.newSlice(1, 3);
     sNoCategory.category = undefined;
     assertFalse(new TimelineCategoryFilter(["x"]).matchSlice(sNoCategory));
 
-    var s0 = new TimelineSlice('a', 0, 1, {}, 3);
+    var s0 = test_utils.newSlice(1, 3);
     s0.category = 'x';
     assertTrue(new TimelineCategoryFilter(["x"]).matchSlice(s0));
 
-    var s1 = new TimelineSlice('ba', 0, 1, {}, 3);
+    var s1 = test_utils.newSliceNamed('ba', 1, 3);
     s1.category = 'y';
     assertFalse(new TimelineCategoryFilter(["x"]).matchSlice(s1));
     assertTrue(new TimelineCategoryFilter(["x", "y"]).matchSlice(s1));
