--- a/trunk/src/timeline_view_test.html
+++ b/trunk/src/timeline_view_test.html
@@ -243,7 +243,7 @@ base.defineModule('timeline_view_test')
       var model = new tracing.TimelineModel();
       var p1 = model.getOrCreateProcess(1);
       var t1 = p1.getOrCreateThread(1);
-      t1.pushSlice(new tracing.TimelineThreadSlice('a', 0, 1, {}, 3));
+      t1.pushSlice(new tracing.TimelineThreadSlice('', 'a', 0, 1, {}, 3));
 
       var timeline = new tracing.Timeline();
       timeline.model = model;
